--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -50,6 +50,13 @@
                 android:src="@drawable/ic_comment_outline_grey"
                 android:background="@drawable/btn_feed_action"/>
 
+            <ImageButton
+                android:id="@+id/btnMore"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_more_grey"
+                android:background="@drawable/btn_feed_action"/>
+
         </LinearLayout>
 
     </LinearLayout>
