--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,9 +8,13 @@
     </style>
 
     <!-- Make CommentsActivity translucent -->
-    <style name="AppTheme.CommentsActivity" parent="AppTheme" >
+    <style name="AppTheme.TransparentActivity" parent="AppTheme" >
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsTranslucent">true</item>
+    </style>
+
+    <style name="AppTheme.TransparentActivity.FullScreen">
+        <item name="android:windowFullscreen">true</item>
     </style>
 
     <!-- Context Menu Style -->
@@ -24,5 +28,6 @@
         <item name="android:textColor">?attr/colorPrimary</item>
         <item name="android:textSize">14sp</item>
     </style>
+
 
 </resources>
