--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/ivUserProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_feed_top" />
