--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
             android:src="@drawable/ic_instagram_white"
             app:borderWidth="0dp"
             app:elevation="6dp"
+            android:onClick="startTakePhoto"
             app:pressedTranslationZ="12dp"/>
 
     </android.support.design.widget.CoordinatorLayout>
